--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,37 +7,47 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TypeRacer on Solana — Race other players in real-time and win SOL. Fast, fair, on-chain."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Primary Meta Tags -->
+    <title>TypeRacer on Solana</title>
+    <meta name="title" content="TypeRacer on Solana" />
+    <meta
+      name="description"
+      content="Race other players in real-time and win SOL. Fast, fair, on-chain."
+    />
+
+    <!-- Open Graph / Discord / Slack -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.typeraceronsol.com/" />
+    <meta property="og:title" content="TypeRacer on Solana" />
+    <meta
+      property="og:description"
+      content="Race other players in real-time and win SOL. Fast, fair, on-chain."
+    />
+    <meta
+      property="og:image"
+      content="https://www.typeraceronsol.com/og-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.typeraceronsol.com/" />
+    <meta name="twitter:title" content="TypeRacer on Solana" />
+    <meta
+      name="twitter:description"
+      content="Race other players in real-time and win SOL. Fast, fair, on-chain."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.typeraceronsol.com/og-image.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
