--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,49 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Basic -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <title>TypeRacer on Solana</title>
     <meta
       name="description"
       content="TypeRacer on Solana — Race other players in real-time and win SOL. Fast, fair, on-chain."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Primary Meta Tags -->
-    <title>TypeRacer on Solana</title>
-    <meta name="title" content="TypeRacer on Solana" />
-    <meta
-      name="description"
-      content="Race other players in real-time and win SOL. Fast, fair, on-chain."
-    />
+    <!-- Link your X/Twitter profile (helps discovery/verification) -->
+    <link rel="me" href="https://x.com/TypeRacerSol" />
+    <!-- Optional: small X icon (keep favicon as-is; this is just an extra icon) -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/x-logo.png" sizes="32x32" />
 
     <!-- Open Graph / Discord / Slack -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="TypeRacer on Solana" />
     <meta property="og:url" content="https://www.typeraceronsol.com/" />
     <meta property="og:title" content="TypeRacer on Solana" />
     <meta
       property="og:description"
       content="Race other players in real-time and win SOL. Fast, fair, on-chain."
     />
-    <meta
-      property="og:image"
-      content="https://www.typeraceronsol.com/og-image.png"
-    />
+    <meta property="og:image" content="https://www.typeraceronsol.com/og-image.png" />
+    <meta property="og:image:alt" content="TypeRacer on Solana logo" />
+    <!-- (optional, only if your og-image is 1200x630) -->
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
-    <!-- Twitter -->
+    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@TypeRacerSol" />
+    <meta name="twitter:creator" content="@TypeRacerSol" />
     <meta property="twitter:url" content="https://www.typeraceronsol.com/" />
     <meta name="twitter:title" content="TypeRacer on Solana" />
     <meta
       name="twitter:description"
       content="Race other players in real-time and win SOL. Fast, fair, on-chain."
     />
-    <meta
-      name="twitter:image"
-      content="https://www.typeraceronsol.com/og-image.png"
-    />
+    <meta name="twitter:image" content="https://www.typeraceronsol.com/og-image.png" />
+    <meta name="twitter:image:alt" content="TypeRacer on Solana logo" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
